infra/k8s/overlays/dev-1node/delete-unused-apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  $patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  $patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow
  $patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  $patch: delete
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  $patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-web
  $patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: nexus
  $patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: airflow
  $patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  $patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  $patch: delete
